[bugfix] fix problem with wrong height of user profile container

--- a/moosic/app/assets/stylesheets/users.scss
+++ b/moosic/app/assets/stylesheets/users.scss
@@ -240,9 +240,9 @@ html, body {
 
 .user-profile-container {
   padding-top: 70px;
-  height: 100%;
+  height: auto;
   position: absolute;
-  top: 40px;
+  top: 0;
   left: 0;
   text-align: center;
   z-index: $index-user-container;
@@ -439,7 +439,7 @@ html, body {
 #flash_messages.user-profile {
   height: 60px;
   width: 100%;
-  top: 22px;
+  top: 0;
   left: 0;
   position: absolute;
   margin-top: 0;
